--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" /> <!-- Splash Activity -->
+            android:value="${MAPS_API_KEY}" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
